WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
197160
Delayed WebProcessLaunch may break the _relatedWebView SPI
https://bugs.webkit.org/show_bug.cgi?id=197160
Summary
Delayed WebProcessLaunch may break the _relatedWebView SPI
Chris Dumez
Reported
2019-04-22 09:03:08 PDT
Delayed WebProcessLaunch may break the _relatedWebView SPI. The breakage would happen if the client would relate a WebView to another which has not launched its initial process yet.
Attachments
Patch
(9.28 KB, patch)
2019-04-22 09:12 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(7.58 KB, patch)
2019-04-22 14:30 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(7.57 KB, patch)
2019-04-22 14:31 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(7.58 KB, patch)
2019-04-22 14:35 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2019-04-22 09:12:19 PDT
Created
attachment 367943
[details]
Patch
WebKit Commit Bot
Comment 2
2019-04-22 11:03:53 PDT
Comment on
attachment 367943
[details]
Patch Clearing flags on attachment: 367943 Committed
r244502
: <
https://trac.webkit.org/changeset/244502
>
WebKit Commit Bot
Comment 3
2019-04-22 11:03:54 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2019-04-22 11:04:25 PDT
<
rdar://problem/50099648
>
Ryan Haddad
Comment 5
2019-04-22 14:04:40 PDT
This change caused layout test and API test crashes: Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 com.apple.WebKit 0x000000010e41de34 WebKit::WebPageProxy::creationParameters(WebKit::WebProcessProxy&, WebKit::DrawingAreaProxy&) + 416 (WebPageProxy.cpp:7026) 1 com.apple.WebKit 0x000000010e44f205 WTF::Function<void (WTF::RefPtr<WebKit::WebPageProxy, WTF::DumbPtrTraits<WebKit::WebPageProxy> >&&)>::CallableWrapper<WebKit::WebPageProxy::createNewPage(WebKit::FrameInfoData const&, unsigned long long, WebCore::ResourceRequest&&, WebCore::WindowFeatures&&, WebKit::NavigationActionData&&, WTF::CompletionHandler<void (unsigned long long, WTF::Optional<WebKit::WebPageCreationParameters> const&)>&&)::$_3>::call(WTF::RefPtr<WebKit::WebPageProxy, WTF::DumbPtrTraits<WebKit::WebPageProxy> >&&) + 97 (Function.h:102) 2 com.apple.WebKit 0x000000010e4a2fa7 WKPageSetPageUIClient::UIClient::createNewPage(WebKit::WebPageProxy&, WebCore::WindowFeatures&&, WTF::Ref<API::NavigationAction, WTF::DumbPtrTraits<API::NavigationAction> >&&, WTF::CompletionHandler<void (WTF::RefPtr<WebKit::WebPageProxy, WTF::DumbPtrTraits<WebKit::WebPageProxy> >&&)>&&) + 225 (WKPage.cpp:1486) 3 com.apple.WebKit 0x000000010e43228c WebKit::WebPageProxy::createNewPage(WebKit::FrameInfoData const&, unsigned long long, WebCore::ResourceRequest&&, WebCore::WindowFeatures&&, WebKit::NavigationActionData&&, WTF::CompletionHandler<void (unsigned long long, WTF::Optional<WebKit::WebPageCreationParameters> const&)>&&) + 1678 (WebPageProxy.cpp:5013) 4 com.apple.WebKit 0x000000010e67a2f7 WebKit::WebPageProxy::didReceiveSyncMessage(IPC::Connection&, IPC::Decoder&, std::__1::unique_ptr<IPC::Encoder, std::__1::default_delete<IPC::Encoder> >&) + 3007 (HandleMessage.h:149)
https://build.webkit.org/builders/Apple%20Mojave%20Release%20WK2%20%28Tests%29/builds/3754
Chris Dumez
Comment 6
2019-04-22 14:08:16 PDT
Reverted
r244502
for reason: Caused crashes on the bots Committed
r244510
: <
https://trac.webkit.org/changeset/244510
>
Chris Dumez
Comment 7
2019-04-22 14:30:34 PDT
Created
attachment 367976
[details]
Patch
Chris Dumez
Comment 8
2019-04-22 14:31:29 PDT
Created
attachment 367977
[details]
Patch
WebKit Commit Bot
Comment 9
2019-04-22 14:33:55 PDT
Comment on
attachment 367977
[details]
Patch Rejecting
attachment 367977
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-02', 'validate-changelog', '--check-oops', '--non-interactive', 367977, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit ChangeLog entry in Source/WebKit/ChangeLog contains OOPS!. Full output:
https://webkit-queues.webkit.org/results/11965057
Chris Dumez
Comment 10
2019-04-22 14:35:38 PDT
Created
attachment 367980
[details]
Patch
WebKit Commit Bot
Comment 11
2019-04-22 15:17:28 PDT
Comment on
attachment 367980
[details]
Patch Clearing flags on attachment: 367980 Committed
r244516
: <
https://trac.webkit.org/changeset/244516
>
WebKit Commit Bot
Comment 12
2019-04-22 15:17:30 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug