Delayed WebProcessLaunch may break the _relatedWebView SPI https://bugs.webkit.org/show_bug.cgi?id=197160

Reviewed by Alex Christensen.

Source/WebKit:

Delayed WebProcessLaunch may break the _relatedWebView SPI. The breakage would happen if the client
would relate a WebView to another which has not launched its initial process yet.

To address the issue, when we need a running process for a WebView which has a related view, we need
to make sure the related view has a running process and use that process. Previously, we would share
the "dummy" process instead.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::launchProcess):
(WebKit::WebPageProxy::ensureRunningProcess):
* UIProcess/WebPageProxy.h:
* UIProcess/WebProcessPool.cpp:
(WebKit::WebProcessPool::createWebPage):

Tools:

Add API test coverage.

* TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm:


Canonical link: https://commits.webkit.org/211377@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244502 268f45cc-cd09-0410-ab3c-d52691b4dbfc